--- a/styles.css
+++ b/styles.css
@@ -175,6 +175,10 @@ body {
   margin: auto;
   margin-bottom: 10px;
   text-align: center;
+  border-radius: 5px;
+  padding: 2px 5px;
+  font-family: "Orbitron", sans-serif;
+  font-size: 13px;
 }
 
 @media screen and (min-width: 600px) {
