--- a/styles.css
+++ b/styles.css
@@ -161,12 +161,13 @@ body {
 .message img {
   display: block;
   margin: 0 auto;
-  max-height: 70px;
+  max-height: 50px;
 }
 
 #weekday,
 #currentDay {
   font-weight: bold;
+  font-size: 15px;
 }
 
 #searchId,
@@ -185,16 +186,25 @@ body {
   .container {
     padding: 0% 20%;
   }
+  body {
+    margin: 0 10%;
+  }
 }
 
 @media screen and (min-width: 1000px) {
   .container {
     padding: 0% 20%;
   }
+  body {
+    margin: 0 20%;
+  }
 }
 
 @media screen and (min-width: 1400px) {
   .container {
     padding: 0% 25%;
+  }
+  body {
+    margin: 0 25%;
   }
 }
