--- a/styles.css
+++ b/styles.css
@@ -127,6 +127,13 @@ body {
   margin-top: 20px;
 }
 
+a:link,
+a:visited,
+a:active {
+  text-decoration: none;
+  color: inherit;
+}
+
 .location {
   display: flex;
   justify-content: center;
